2006-01-11  Bob Halley  <halley@dnspython.org>

	* dns/ttl.py: TTLs are now bounds checked to be within the closed
	  interval [0, 2^31 - 1].

	* The BIND 8 TTL syntax is now accepted in the SOA refresh, retry,
	  expire, and minimum fields, and in the original_ttl field of
	  SIG and RRSIG records.

2006-01-04  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: The windows registry irritatingly changes the
	  list element delimiter in between ' ' and ',' (and vice-versa)
	  in various versions of windows.  We now cope by always looking
	  for either one (' ' first).

2005-12-27  Bob Halley  <halley@dnspython.org>

	* dns/e164.py: Added routines to convert between E.164 numbers and
	  their ENUM domain name equivalents.

	* dns/reversename.py: Added routines to convert between IPv4 and
	  IPv6 addresses and their DNS reverse-map equivalents.

2005-12-18  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/ANY/LOC.py (_tuple_to_float): The sign was lost when
	  converting a tuple into a float, which broke conversions of
	  south latitudes and west longitudes.

2005-11-17  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: The 'origin' parameter to from_text() and from_file()
	  is now optional.  If not specified, dnspython will use the
	  first $ORIGIN in the text as the zone's origin.

	* dns/zone.py: Sanity checks of the zone's origin node can now
	  be disabled.

2005-11-12  Bob Halley  <halley@dnspython.org>

	* dns/name.py: Preliminary Unicode support has been added for
	  domain names.  Running dns.name.from_text() on a Unicode string
	  will now encode each label using the IDN ACE encoding.  The
	  to_unicode() method may be used to convert a dns.name.Name with
	  IDN ACE labels back into a Unicode string.  This functionality
	  requires Python 2.3 or greater.

2005-10-31  Bob Halley  <halley@dnspython.org>

	* (Version 1.3.5 released)

2005-10-12  Bob Halley  <halley@dnspython.org>

	* dns/zone.py: Zone.iterate_rdatasets() and Zone.iterate_rdatas()